[package]
name = "prism3-value"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Hu Haixing <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3-prism/prism3-rust-value"
description = "Type-safe value container framework with unified abstractions for single values, multi-values, and named values with complete serde support"
homepage = "https://github.com/3-prism/prism3-rust-value"
documentation = "https://docs.rs/prism3-value"
readme = "README.md"
keywords = ["value", "container", "type-safe", "serde", "prism3"]
categories = ["data-structures", "config", "development-tools"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "prism3_value"
doctest = false

[dependencies]
# 核心依赖
prism3-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tracing = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 支持
uuid = { version = "1.0", features = ["v4", "serde"] }

# 数值处理
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
