[package]
name = "qubit-value"
version = "0.4.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-value"
description = "Type-safe value container framework with unified abstractions for single values, multi-values, and named values with complete serde support"
homepage = "https://github.com/qubit-ltd/rs-value"
documentation = "https://docs.rs/qubit-value"
readme = "README.md"
keywords = ["value", "container", "type-safe", "serde", "qubit"]
categories = ["data-structures", "config", "development-tools"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_value"
doctest = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

qubit-common = "0.6"
